# ComfyUI_pixtral_large

./: README.md  __init__.py  pixtral_large_node.py  pyproject.toml
example/: Pixtral large 1 input.json  Pixtral large 3 inputs.json
web/js/: multiimagesinput.js  preview-text.js
