[project]
name = "comfyui-pixtral-large"
version = "1.0.0"
description = "A ComfyUI custom node that integrates Mistral AI's Pixtral Large vision model, enabling powerful multimodal AI capabilities within ComfyUI. Pixtral Large is a 124B parameter model (123B decoder + 1B visual encoder)"
authors = [
    { name = "Shmuel Ronen" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests",
    "pillow",
    "torch",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pre-commit>=4.0.1"
]

[project.urls]
Repository = "https://github.com/ShmuelRonen/ComfyUI_pixtral_large"

[tool.comfy-nodes]
publisher = "@shmuel"